[package]
name = "forgers"
version = "0.1.0"
authors = ["Ali Ghaffaari <ali@ghaffaari.com>"]
edition = "2021"
description = "VCF manipulation based on FORGe ranking"
license = "MIT"
homepage = "https://github.com/cartoonist/forgers"
repository = "https://github.com/cartoonist/forgers"
readme = "README.md"
keywords = ["bioinformatics", "pangenomics", "pangenome", "vcf"]
categories = ["command-line-utilities", "science::bioinformatics::genomics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcf = "0.6.1"
log = "0.4"
env_logger = "0.11.5"
structopt = "0.3.26"
flate2 = "1.0.31"
bitvec = "1.0.1"
